fix header horisontal overflow

--- a/scss/default.scss
+++ b/scss/default.scss
@@ -9,10 +9,14 @@ body {
     line-height: 1.5em;
     margin: 0 auto;
     max-width: 40em;
+    overflow-x: hidden;
+    max-width: 100%;
 }
 
 header {
     background-color: rgb(210, 224, 196);
+    display: flex;
+    justify-content: center;
     margin: 1.5em 1em;
     padding-bottom: 0.5em;
     text-align: center;
@@ -20,18 +24,20 @@ header {
 
     .container {
         transform: skew(20deg, 2deg) scale(1.25);
-    }
 
-    h1 { font-size: 1.5em }
-
-    #profile {
-        background-image: url(/profile.jpg);
-        background-size: contain;
-        border-radius: 50%;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
-        height: 8em;
-        margin: 0 auto 1em auto;
-        width: 8em;
+        h1 {
+            font-size: 1.5em;
+            display: inline-block
+        }
+        #profile {
+            background-image: url(/profile.jpg);
+            background-size: contain;
+            border-radius: 50%;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+            height: 8em;
+            margin: 0 auto 1em auto;
+            width: 8em;
+        }
     }
 }
 
